compiler/weave_syntax/tests/data/syntax/expressions/yield0002.error
error: Expected ';'
        --> <source>:23:9
         |
      23 |         case 1:
         |         ^^^^
error: Expected ';'
        --> <source>:27:9
         |
      27 |         default:
         |         ^^^^^^^
error: Expected ';'
        --> <source>:31:5
         |
      31 |     };
         |     ^
