compiler/weave_syntax/tests/data/syntax/expressions/yield0002.source
// yield in return if expressions
function YieldInIfExpression(x: Int32) -> Int32
{
    // this should be parsed as a return statement
    // if/match expressions must have a yield in all branches
    // semicolon after return is optional in this case?
    return if x > 0 {
        yield 42;
    } else {
        yield 2137;
    };
}

// yield in return match expressions
function YieldInMatchExpression(x: Int32) -> Int32
{
    return match x
    {
        case 0:
        {
            yield 42;
        }
        case 1:
        {
            yield 69;
        }
        default:
        {
            yield 2137;
        }
    };
}
